--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/pickers": "^3.3.10",
+    "date-fns": "^2.22.1",
     "firebase": "^8.6.5",
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
