--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.2.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "eccoecco-takeout-management-screen",
+  "description": "Line pay APIとLine Liffを活用したテイクアウトシステム",
+  "version": "1.0.0",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
